fixed bug where sometimes invisible images would cover the buttons forcing you to be unable to rotate the map modal

--- a/main.css
+++ b/main.css
@@ -26,6 +26,7 @@
     justify-content: center;
     font-size: 5rem;
     position: absolute;
+    z-index: 50;
 }
 
 .down-arrow{
